feat: 通过UserID返回入驻用户的信息
